--- a/app/src/main/res/layout/activity_entertainment.xml
+++ b/app/src/main/res/layout/activity_entertainment.xml
@@ -5,10 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/app_bar_main">
-
-
+    tools:context=".EntertainmentActivity">
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="0dp"
