--- a/app/src/main/res/layout/fragment_board_game.xml
+++ b/app/src/main/res/layout/fragment_board_game.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".BoardGameFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_board_game_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/title_board_game_fragment" />
-
+        android:layout_height="match_parent" />
 </LinearLayout>
