--- a/app/src/main/res/layout/fragment_entertainment.xml
+++ b/app/src/main/res/layout/fragment_entertainment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
-    tools:context=".CreateFragment">
+    tools:context=".EntertainmentFragment">
 
     <TextView
         android:id="@+id/tv_header"
@@ -91,7 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/add_item"
+        android:text="@string/save_item"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dv_bottom" />
